[tool.poetry]
name = "web-hw11-fastapi"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "web_hw11_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.13"
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
